--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,57 @@ nav a {
 nav a img {
     height: 1.6em;
 }
+
+.dark-mode{
+    background-color: black;
+    color: whitesmoke;
+}
+.dark-mode #logo{
+    filter: invert(0.95);
+}
+.dark-mode h1{
+    color: #ccc;
+}
+.dark-mode input[type="checkbox"]:checked + label{
+    background-color: #444;
+}
+.dark-mode input[type="checkbox"]:not(:checked) + label {
+    background-color: #222;
+}
+.dark-mode #searchBox{
+    color: whitesmoke;
+    background-color: black;
+}
+
+.dark-mode .basics {
+    /* color: #00359E; */
+    color: #9EBEFF;
+    color: #58C8C3;
+}
+.dark-mode .starters {
+    /* color: #e36c0a; */
+    color: #F27C1B;
+    color: #EE9B56;
+}
+.dark-mode .main-courses {
+    /* color: #00b050; */
+    color: #4FFF9E;
+    /* color: #c00000; */
+    color: #FF4040;
+    color: #FD6767;
+}
+.dark-mode .desserts {
+    /* color: #0070c0; */
+    color: #40AFFF;
+    color: #74C5FF;
+}
+.dark-mode .ice-creams {
+    /* color: #5f497a; */
+    color: #4B3566;
+    color: #BB83FF;
+}
+.dark-mode .breads {
+    /* color: #8A4500; */
+    color: #FFBA75;
+    color: #FFFD97;
+}
