--- a/styles.css
+++ b/styles.css
@@ -94,16 +94,22 @@ nav {
     justify-content: center;
     align-items: center;
 }
-
 nav a {
     text-decoration: none;
     font-size: 1.2em;
     padding: 0;
     margin: 0.1em;
 }
-
 nav a img {
     height: 1.6em;
+}
+nav button{
+    margin-top: -0.2em;
+    margin-left: 0.5em;
+    background: none;
+    border: none;
+    font-size: 2em;
+    cursor: pointer;
 }
 
 .dark-mode{
