--- a/styles.css
+++ b/styles.css
@@ -67,12 +67,11 @@ input[type="checkbox"] {
     display: none;
 }
 
-input[type="checkbox"]:not(:checked)+label {
-    background-color: #f1f1f1;
-}
-
 input[type="checkbox"]:checked+label {
     background-color: #ccc;
+}
+input[type="checkbox"]:not(:checked)+label {
+    background-color: #d8d8d8;
 }
 
 label {
@@ -158,19 +157,16 @@ nav button{
     color: rgba(255,255,255,.8)
 }
 .dark-mode #logo{
-    filter: invert(0.95);
-}
-.dark-mode .recipe-image{
-    filter: invert(1);
+    filter: invert(0.8);
 }
 .dark-mode h1{
     color: #ccc;
 }
 .dark-mode input[type="checkbox"]:checked + label{
-    background-color: #444;
+    background-color: #aaa;
 }
 .dark-mode input[type="checkbox"]:not(:checked) + label {
-    background-color: #222;
+    background-color: #ccc;
 }
 .dark-mode #searchBox{
     color: whitesmoke;
