--- a/styles.css
+++ b/styles.css
@@ -166,11 +166,11 @@ nav button{
     color: #ccc;
 }
 .dark-mode input[type="checkbox"]:checked + label{
-    background-color: #aaa;
-    /* background-color: #333; */
+    background-color: white;
+    box-shadow: black 0 0 10px;
 }
 .dark-mode input[type="checkbox"]:not(:checked) + label {
-    background-color: #ccc;
+    background-color: white;
     /* background-color: #181818; */
 }
 .dark-mode #searchBox{
