--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ nav button{
     background-color: #1e1e1e;
 }
 
-.dark-mode .recipe-image
+.dark-mode .recipe-image,
 .dark-mode .basics, 
 .dark-mode .starters,
 .dark-mode .main-courses,
